--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
 body{
-    padding: 0%;
+    
+}
+.container{
+    display: grid;
+    grid-template: 1fr 3.5fr / 1fr 2.5fr 1fr;
+}
+.sidebar{
+    grid-row: 1 / 3;
+}
+.header{
+    grid-column: 2 / 4;
 }
