--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ body{
 }
 .sidebar{
     grid-row: 1 / 3;
+    display: grid;
+    grid-template: 4rem repeat(7,3rem) 3rem repeat(3,3rem) / 1fr 4fr;
+    gap: 5px;
+    padding: 10px;
 }
 .header{
     grid-column: 2 / 4;
@@ -14,4 +18,37 @@ body{
 .bigpic, .pics, .fork{
     width: 100px;
     height: auto;
+}
+a{
+    display: flex;
+}
+.home{
+    grid-row: 3/4;
+}
+.profile{
+    grid-row: 4/5;
+}
+.msgs{
+    grid-row: 5/6;
+}
+.history{
+    grid-row: 6/7;
+}
+.task{
+    grid-row: 7/8;
+}
+.comm{
+    grid-row: 8/9;
+}
+.setting{
+    grid-row: 10/11;
+}
+.support{
+    grid-row: 11/12;
+}
+.privacy{
+    grid-row: 12/13;
+}
+.h1{
+    grid-column: 2/3;
 }
