--- a/styles.css
+++ b/styles.css
@@ -3,24 +3,27 @@ body{
 }
 .container{
     display: grid;
-    grid-template: 1fr 3.5fr / 1fr 2.5fr 1fr;
+    grid-template: 1fr 3.5fr / 1fr 3fr 1fr;
 }
 .sidebar{
     grid-row: 1 / 3;
     display: grid;
-    grid-template: 4rem repeat(7,3rem) 3rem repeat(3,3rem) / 1fr 4fr;
+    grid-template: 4rem repeat(7,3rem) 3rem repeat(3,3rem) / 1fr 2.5fr;
     gap: 5px;
-    padding: 10px;
+    padding: 30px;
+    font-size: 23px;
+    background-color: pink;
 }
 .header{
     grid-column: 2 / 4;
 }
-.bigpic, .pics, .fork{
+.bigpic, .pics{
     width: 100px;
     height: auto;
 }
-a{
-    display: flex;
+.fork{
+    width: 50px;
+    height: auto;
 }
 .home{
     grid-row: 3/4;
@@ -49,6 +52,44 @@ a{
 .privacy{
     grid-row: 12/13;
 }
-.h1{
-    grid-column: 2/3;
+.home1{
+    grid-area: 3/2;
+}
+.profile1{
+    grid-area: 4/2;
+}
+.msgs1{
+    grid-area: 5/2;
+}
+.history1{
+    grid-area: 6/2;
+}
+.task1{
+    grid-area: 7/2;
+}
+.comm1{
+    grid-area: 8/2;
+}
+.setting1{
+    grid-area: 10/2;
+}
+.support1{
+    grid-area: 11/2;
+}
+.privacy1{
+    grid-area: 12/2;
+}
+.name1{
+    font-size: 30px;
+}
+.icon{
+    justify-self: center;
+}
+a{
+    align-self: center;
+    text-decoration: none;
+}
+.name{
+    width: 60px;
+    height: auto;
 }
