--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
 }
 .container{
     display: grid;
-    grid-template: 1fr 3.5fr / 1fr 3fr 1fr;
+    grid-template: 1fr 5fr / 1fr 3fr 1fr;
 }
 .sidebar{
     grid-row: 1 / 3;
@@ -92,4 +92,74 @@ a{
 .name{
     width: 60px;
     height: auto;
+}
+.header{
+    display: grid;
+    grid-template: 1fr 1fr 1fr/ repeat(2, 1fr) 2fr 4fr 6fr 1fr 2fr repeat(4, 1fr) 2fr;
+    padding: 10px;
+    background-color:aquamarine;
+}
+.magnify{
+    width: 40px;
+    height: auto;
+}
+input{
+    grid-column: 2/6;
+    height: 40px;
+    border-radius: 20px;
+    align-self: center;
+    font-size: 25px;
+}
+.bell{
+    grid-column: 8/9;
+    width: 40px;
+    height: auto;
+}
+.dp{
+    grid-column: 9/10;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.myName{
+    grid-column: 10/13;
+    font-size: 30px;
+    font-weight: 900;
+}
+.dp2{
+    grid-area: 2/1/4/3;
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+}
+.hi{
+    grid-area: 2/3/3/4;
+    align-self: end;
+    font-size: 20px;
+    font-weight: 900;
+}
+.username{
+    grid-area: 3/3/4/5;
+    align-self: start;
+    font-size: 30px;
+    font-weight: 900;
+}
+.new{
+    grid-area: 2/7/4/8;
+}
+.upload{
+    grid-area: 2/9/4/11;
+}
+.share{
+    grid-area: 2/12/4/13;
+}
+.frow{
+    align-self: center;
+    justify-self: center;
+}
+button{
+    width: 150px;
+    height: 50px;
+    border-radius: 30px;
+    font-size: 25px;
 }
