--- a/styles.css
+++ b/styles.css
@@ -96,23 +96,24 @@ a{
 .header{
     display: grid;
     grid-template: 1fr 1fr 1fr/ repeat(2, 1fr) 2fr 4fr 6fr 1fr 2fr repeat(4, 1fr) 2fr;
-    padding: 10px;
+    padding: 0 40px;
+    padding-top: 10px;
     background-color:aquamarine;
 }
 .magnify{
-    width: 40px;
+    width: 30px;
     height: auto;
 }
 input{
     grid-column: 2/6;
-    height: 40px;
+    height: 30px;
     border-radius: 20px;
     align-self: center;
     font-size: 25px;
 }
 .bell{
     grid-column: 8/9;
-    width: 40px;
+    width: 30px;
     height: auto;
 }
 .dp{
@@ -123,13 +124,13 @@ input{
 }
 .myName{
     grid-column: 10/13;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 900;
 }
 .dp2{
     grid-area: 2/1/4/3;
-    width: 130px;
-    height: 130px;
+    width: 110px;
+    height: 110px;
     border-radius: 50%;
 }
 .hi{
@@ -140,8 +141,8 @@ input{
 }
 .username{
     grid-area: 3/3/4/5;
-    align-self: start;
-    font-size: 30px;
+    align-self:start;
+    font-size: 25px;
     font-weight: 900;
 }
 .new{
@@ -158,8 +159,8 @@ input{
     justify-self: center;
 }
 button{
-    width: 150px;
-    height: 50px;
+    width: 160px;
+    height: 40px;
     border-radius: 30px;
     font-size: 25px;
 }
