--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 body{
     margin: 0%;
+    height: 100vh;
 }
 .container{
     display: grid;
     grid-template: 1fr 5fr / 1fr 3fr 1fr;
+    height: 100vh;
 }
 .sidebar{
     grid-row: 1 / 3;
@@ -13,6 +15,7 @@ body{
     padding: 30px;
     font-size: 23px;
     background-color: pink;
+    height: 100vh;
 }
 .header{
     grid-column: 2 / 4;
@@ -132,18 +135,21 @@ input{
     width: 110px;
     height: 110px;
     border-radius: 50%;
+    padding-right: 10px;
 }
 .hi{
     grid-area: 2/3/3/4;
     align-self: end;
     font-size: 20px;
     font-weight: 900;
+    margin-bottom: 0%;
 }
 .username{
     grid-area: 3/3/4/5;
     align-self:start;
     font-size: 25px;
     font-weight: 900;
+    margin-top: 0%;
 }
 .new{
     grid-area: 2/7/4/8;
@@ -163,4 +169,66 @@ button{
     height: 40px;
     border-radius: 30px;
     font-size: 25px;
+}
+.rightbar{
+    padding: 10px;
+    padding-right: 40px;
+    background-color:darkgrey;
+}
+.ann, .a, .trend{
+    font-size: 20px;
+    font-weight: 900;
+}
+.a{
+    font-size: 18px;
+}
+.trend{
+    margin-top: 40px;
+}
+.trendBox{
+    display: grid;
+    grid-template: repeat(4,1fr) / 1fr;
+    height: fit-content;
+}
+.t{
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 2fr;
+    padding-right: 70px;
+    align-items: center;
+    padding-bottom: 10px;
+}
+.pics{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    grid-row: 1/3;
+    
+}
+.bot{
+    grid-area: 2/2/3/3;
+    margin-top: 0%;
+}
+.top{
+    margin-bottom: 0%;
+}
+
+.content{
+    display: grid;
+    grid-template: 1fr 10fr / 1fr;
+    background-color:burlywood;
+}
+.project{
+    padding: 20px;
+    font-size: 20px;
+    margin-top: 0;
+}
+.box{
+    border: 2px solid black;
+    padding: 20px;
+    margin: 20px;
+}
+.main-cont{
+    display: grid;
+    grid-template: repeat(2, 1fr) / repeat(auto-fit, minmax(400px, 1fr));
+    height: fit-content;
 }
