--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,7 @@ button{
 }
 .top{
     margin-bottom: 0%;
+    font-weight: 900;
 }
 
 .content{
@@ -226,9 +227,32 @@ button{
     border: 2px solid black;
     padding: 20px;
     margin: 20px;
+    display: grid;
+    grid-template: repeat(3,1fr) / 1fr repeat(3,0.3fr);
 }
 .main-cont{
     display: grid;
     grid-template: repeat(2, 1fr) / repeat(auto-fit, minmax(400px, 1fr));
     height: fit-content;
+}
+.fav,.eye,.fork{
+    width: 40px;
+    height: auto;
+}
+.head{
+    font-size: 25px;
+    font-weight: 900;
+    grid-column: 1/5;
+}
+.info{
+    grid-column: 1/5;
+}
+.fav{
+    grid-area: 3/2;
+}
+.eye{
+    grid-area: 3/3;
+}
+.fork{
+    grid-area: 3/4;;
 }
