--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 body{
     margin: 0%;
     height: 100vh;
+    
 }
 .container{
     display: grid;
     grid-template: 1fr 5fr / 1fr 3fr 1fr;
     height: 100vh;
+    font-family: 'Akshar', sans-serif;
 }
 .sidebar{
     grid-row: 1 / 3;
@@ -14,7 +16,7 @@ body{
     gap: 5px;
     padding: 30px;
     font-size: 23px;
-    background-color: #28a899;
+    background-color:darkcyan;
     
 }
 .header{
@@ -173,8 +175,10 @@ button{
     height: 40px;
     border-radius: 30px;
     font-size: 25px;
-    background-color: #28a899;
+    background-color: darkcyan;
     color: white;
+    font-family: 'Akshar', sans-serif;
+    box-shadow: 1px 1px 10px 2px #9da5a8;
 }
 .rightbar{
     padding: 10px;
@@ -230,9 +234,10 @@ button{
     padding-bottom: 0%;
     font-size: 20px;
     margin-top: 0;
+    font-weight: 900;
 }
 .box{
-    border-left : 10px solid #581c87;
+    border-left : 10px solid darkcyan;
     padding: 5px 20px;
     margin: 20px;
     margin-top: 0%;
@@ -267,4 +272,10 @@ button{
 }
 .fork{
     grid-area: 3/4;;
+}
+.announce, .trendBox{
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 6px rgb(170, 187, 183)
 }
